@@ -36,6 +36,7 @@ production.
   belongs in LocalSettings.php.
 * $wgSkipSkin, which has been replaceable by $wgSkipSkins since 2005 (r9249), is
   now formally deprecated.
+* Deprecated $wgCopyrightIcon was removed.
 
 === New features in 1.23 ===
 * ResourceLoader can utilize the Web Storage API to cache modules client-side.
